hid submit button for non-logged in users, replaced sign up links with claim account links, created claim account info page, minor fixes

--- a/src/app/assets/stylesheets/_themes.scss
+++ b/src/app/assets/stylesheets/_themes.scss
@@ -6,6 +6,7 @@ $themes: (
     colorWhite: $color-white,
     backgroundColor: $color-background-off-white,
     backgroundColorOpaque: $color-background-off-white,    
+    backgroundColorContrasting: $color-background-white,    
     backgroundTransparent: transparent,
     moduleBackgroundColor: $color-white,
     menuBackgroundColor: $color-background-dark,
@@ -42,6 +43,7 @@ $themes: (
     colorWhite: $color-white,
     backgroundColor: $color-background-dark,
     backgroundColorOpaque: $color-darkblue,
+    backgroundColorContrasting: $color-background-black,    
     moduleBackgroundColor: $color-background-dark,
     backgroundTransparent: transparent,
     menuBackgroundColor: $color-darkblue,
