--- a/src/app/assets/stylesheets/_variables.scss
+++ b/src/app/assets/stylesheets/_variables.scss
@@ -23,8 +23,10 @@ $color-teal-dark:#049173;
 $color-yellow: #fce76c;
 $color-transparent: transparent;
 
+$color-background-white: #fff;
 $color-background-off-white: #e9ebee;
 $color-background-dark: #1C252B;
+$color-background-black: #000;
 
 $color-text-dark: #333;
 $color-text-darker: #202020;
