--- a/src/app/components/all.scss
+++ b/src/app/components/all.scss
@@ -54,6 +54,7 @@
 @import "./pages/PostsIndex";
 @import "./pages/Topics";
 @import "./pages/CreateAccount";
+@import "./pages/Claim";
 @import "./pages/Post";
 @import "./pages/Privacy";
 @import "./pages/Testnet";
