Colored user menu icons, fit user profile menu in one row onmobile, minor fixes

--- a/src/app/components/elements/Icon.scss
+++ b/src/app/components/elements/Icon.scss
@@ -47,3 +47,12 @@
 .Icon.dropdown-arrow polygon {
   fill: $dark-gray;
 }
+
+.Usermenu .Icon {
+  @include themify($themes) {
+    color: themed('iconPrimary');
+  }
+  path {
+    fill: $color-text-gray;
+  }
+}
