--- a/src/app/components/cards/Comment.scss
+++ b/src/app/components/cards/Comment.scss
@@ -73,6 +73,7 @@
   color: $black;
   font-size: 100%;
   font-weight: 600;
+  padding-right: 0.5rem;
   a {    
     @extend .link;
     @extend .link--primary;
