--- a/src/app/components/pages/Post.scss
+++ b/src/app/components/pages/Post.scss
@@ -35,8 +35,11 @@
     max-width: 50rem;
     margin: 0 auto 3.5rem;
     font-size: 92%;
-    padding: 2rem 3rem 1rem 3rem;
-
+    padding: 1rem;
+    
+    &:empty {
+      padding: 0;
+    }
     @include MQ(ML) {
         padding: 2rem 2rem 1rem 2rem;
     }
